<resources>
    <string name="app_name">Тачки на прокачку</string>
    <string name="app_ver">1.8</string>
    <string name="appSettingsName">tachkiNaProkachkySettings</string>
    <string name="appIsActive">appIsActive</string>
    <string name="appKey">appKey</string>
    <string name="appLoginUser">appLoginUser</string>
    <string name="appDisplayName">appDisplayName</string>
    <string name="appIsAdmin">appIsAdmin</string>
    <string name="appMoneyCase">appMoneyCase</string>
    <string name="appPass">appPass</string>
    <string name="appLogin">appLogin</string>
    <string name="appUsersInHire">appUserInHire</string>
    <string name="appUserHire">appUserHire</string>
    <string name="appUserMoneyInDay">appUserMoneyInDay</string>
    <string name="appTextRules">appTextRules</string>
    <string name="appTextRekv">appTextRekv</string>

    <string name="TextInputLogin">Введите логин</string>
    <string name="TextInputPassword">Введите пароль</string>
    <string name="TextInputNameAndSurname">Введите имя и фамилию</string>
    <string name="TextInputFIO">ФИО</string>
    <string name="TextInputNameTariff">Введите название тарифа</string>
    <string name="TextInputMaxHour">Введите после скольки часов оплата не будет взиматься</string>
    <string name="TextInputHourMin">Введите спустя сколько мин. будет засчитываться час аренды</string>
    <string name="TextInputCountCart">Введите кол. тележек</string>
    <string name="TextInputPricePerHour">Введите цену за час аренды</string>
    <string name="TextInputFIOFull">Проверьте правильность ввода</string>
    <string name="TextInputFullField">Заполните поле</string>
    <string name="TextInputPhone">Введите номер телефона</string>
    <string name="TextInputPassport">Введите номер паспорта</string>
    <string name="TextInputDeposit">Введите сумму либо вид залога</string>
    <string name="TextInputHomeAddress">Введите домашний адрес</string>
    <string name="TextInputBarcode">Введите штрихкод либо отсканируйте его</string>
    <string name="TextInputKeyApp">Введите ключ активации</string>
    <string name="TextInputSearch">Введите фио</string>

    <string name="TextAddMoney">Добавить в кассу</string>
    <string name="TextRemoveMoney">Вычесть из кассы</string>
    <string name="TextCommentMoney">Добавить комментарий</string>
    <string name="TextLogin">Вход</string>
    <string name="TextReportUser">Отчеты о пользователях</string>
    <string name="TextReportMoney">Отчеты о кассе</string>
    <string name="TextAdd">Добавить</string>
    <string name="TextAddPhoto">Добавить фотографию</string>
    <string name="TextRegistration">Регистрация</string>
    <string name="TextAccessModeAdmin">Доступ к режиму администратора</string>
    <string name="TextActiveApp">Активация приложения</string>
    <string name="TextActivation">Активация</string>
    <string name="TextActivateTrue">Активация прошла успешно</string>
    <string name="TextKeyIsActive">Ключ уже активирован</string>
    <string name="TextNoKey">Не удалось найти данный ключ</string>
    <string name="TextErrorBD">Ошибка подключения к Базе Данных</string>
    <string name="TextNoInternet">Проверьте сетевое подключение</string>
    <string name="TextNeedEditKey">Введите ключ</string>
    <string name="TextRegisterTrue">Регистрация прошла успешно</string>
    <string name="TextKeyFail">Ключи не совпадают</string>
    <string name="TextMain">Главная</string>
    <string name="TextRemoteControl">Удаленное управление</string>
    <string name="TextAddAppRemoteControl">Добавление приложения</string>
    <string name="TextSearchPrinter">Поиск принтера</string>
    <string name="TextChangeTariff">Выбор тарифов</string>
    <string name="TextAddClient">Добавление одноразового клиента</string>
    <string name="TextAddConstClient">Добавить постоянного клиента</string>
    <string name="TextScanBarcode">Сканирование штрихкода</string>
    <string name="TextNext">Далее</string>
    <string name="TextAddTariff">Добавить тариф</string>
    <string name="TextPlay">Начать</string>
    <string name="TextEditTariff">Редактировать тариф</string>
    <string name="TextEditConstClient">Редактировать постоянного клиента</string>
    <string name="TextConstClients">Постоянные клиенты</string>
    <string name="TextTariffs">Тарифы</string>
    <string name="TextReport">Отчеты</string>
    <string name="TextGenerateKey">Генерация ключей</string>
    <string name="TextControlRules">Правила</string>
    <string name="TextAdmin">Администратор</string>
    <string name="TextManager">Менеджер</string>
    <string name="TextTrueAddClient">Новый клиент добавлен</string>
    <string name="TextTrueAddTariff">Новый тариф добавлен</string>
    <string name="TextTrueEditClient">Клиент редактирован</string>
    <string name="TextTrueEditTariff">Тариф редактирован</string>
    <string name="TextFailEditClient">Не удалось редактировать клиента</string>
    <string name="TextFailEditTariff">Не удалось редактировать тариф</string>
    <string name="TextFailScanned">Ошибка сканирования</string>
    <string name="TextConstClient">Постоянный клиент</string>
    <string name="TextClient">Одноразовый клиент</string>
    <string name="TextChangeTypeClient">Выберите тип клиента</string>
    <string name="TextElse">Или</string>
    <string name="TextStartHire">Начать прокат</string>
    <string name="TextStopHire">Остановить прокат</string>
    <string name="TextFailTariff">Данного тарифа нету</string>
    <string name="TextHireStart">Прокат начался</string>

    <string name="TextModeBluetooth">Bluetooth</string>
    <string name="TextModeEthernet">Ethernet</string>
</resources>
