<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_hire"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.landmark.tnp.StartHireActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextChangeTypeClient"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button_dark"
            android:textColor="#fff"
            android:text="@string/TextConstClient"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:stateListAnimator="@null"
            android:id="@+id/buttonConstClient"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextElse"
            android:textSize="20sp" />

        <Button
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button_dark"
            android:textColor="#fff"
            android:text="@string/TextClient"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:stateListAnimator="@null"
            android:id="@+id/buttonClient"/>

    </LinearLayout>

</RelativeLayout>
