<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_client_set_parametrs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.landmark.tnp.ClientSetParametrsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/scrollView"
        android:layout_margin="16dp"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/icon_person_outline_color" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomTextInputLayout"
                    android:id="@+id/textInputFIO">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextInputFIO"
                        android:textColor="@color/colorTextSecondary"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/icon_phone" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomTextInputLayout"
                    android:id="@+id/textInputPhone">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextInputPhone"
                        android:textColor="@color/colorTextSecondary"
                        android:inputType="phone"
                        android:digits="0123456789+"
                        android:maxLength="12"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/icon_balance_dark" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomTextInputLayout"
                    android:id="@+id/textInputDeposit">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextInputDeposit"
                        android:textColor="@color/colorTextSecondary"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
